force-app/main/default/objects/HRCFSL_Org_Exception_Rule__c/HRCFSL_Org_Exception_Rule__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is for maintaining the exceptional behaviour of certain profile for validation rule and other items</description>
    <label>Org Exception Rule</label>
</CustomObject>