force-app/main/default/objects/HRCFSL_Org_Exception_Rule__c/fields/HRCFSL_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Process_Builder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For limiting certain profiles to run process builder.(#HF 26)</description>
    <label>Process Builder</label>
    <type>Checkbox</type>
</CustomField>