force-app/main/default/objects/HRCFSL_Org_Exception_Rule__c/fields/HRCFSL_Trigger__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger</label>
    <type>Checkbox</type>
</CustomField>