force-app/main/default/objects/HRCFSL_Org_Exception_Rule__c/fields/HRCFSL_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Rule</label>
    <type>Checkbox</type>
</CustomField>