force-app/main/default/objects/HRCFSL_Org_Exception_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>HRCFSL_Process_Builder__c</columns>
    <columns>HRCFSL_Validation_Rule__c</columns>
    <columns>HRCFSL_Trigger__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>